@@ -1,8 +1,6 @@
 AUX gegl-libavformat.patch 412 RMD160 609a536697aa60cab14d03e04a7bc6c3df696454 SHA1 47a766413b4fc8ca5b87a0310bb3b5dae1cf31f1 SHA256 282632a16c7b430744349d8418a10540693aef930699adca1d490d40520cf102
-DIST gegl-0.0.16.tar.bz2 845855 RMD160 966f35e9ad94bb82ec1b4ed8e0ac644c32950030 SHA1 de262a29fc3c6c5fc1a436828044cf22756fb54b SHA256 120fc5b5573bd6e721cc7c5b443c1c556f69f432cac44f029ba917b4efc3eb49
 DIST gegl-0.0.18.tar.bz2 1204867 RMD160 baff271141c0a569c98537b3d727b1a3564cdebb SHA1 f8113ad33161337eb107ad84c0ac968dca1d02d2 SHA256 58d5c2c415684f5744dd8dec80a1c230fc4b02ecea6c9edf3b5ef3ed4046ef93
-EBUILD gegl-0.0.16.ebuild 1595 RMD160 64b16285ab67967bae516317269cdead2770c9d7 SHA1 8eb916c9e1db5a8263aa4cec8a63b18d2e80e483 SHA256 2f489a2a237a9cf9bcbc78f7a1e452b0a3f3387ce0e1663065b822199aef6424
-EBUILD gegl-0.0.18-r1.ebuild 2623 RMD160 8a4ed3d9a53689adbefe8f50ec5bfa336df0dec7 SHA1 3832e2b9648ef797e0df1aabeadfb2eebeb2ea90 SHA256 9b8d1301c5f44848ad3fe1cf49229106db3f0b5e4e55f1b8afa85718b5b86e55
-EBUILD gegl-0.0.18.ebuild 2522 RMD160 5c0595edc9b79dfb419d48279ddffcc6980c3057 SHA1 77479ae4139ce56dc219ca85a820fa9f29221012 SHA256 5e807a6c75bdb5ea89af1984fd38414ac04b688abc34239f555174a7650bda1c
-EBUILD gegl-9999.ebuild 1633 RMD160 c22e98b7f67923fff18340a89ca11931793afba8 SHA1 c8182eaeac7ca57ebd0d7dc26b921fc249011f05 SHA256 6bbc00dbd49e9b35b828d7891e893ae08ff86410eb199b5acf4a54eacaab56e3
-MISC ChangeLog 1094 RMD160 e1588006d221798590a63fd98278a4d10bca6cfb SHA1 c193750fbf96b75c39f5363ab757b03fdde7ed90 SHA256 ce43adc149451a28e230c6a1dc8ab3a9ccc5ad85c253f7dd6d719d9c4a0be552
+EBUILD gegl-0.0.18-r1.ebuild 2576 RMD160 77cb4effa646fd78c914df4d9fc80847f96dc72e SHA1 c47c159429bb72d41d794cce4a09ff47fb1f1ca4 SHA256 0bd4b46b27d4946974b3c8a2f0f17e6961bbbacace565d1cd5a0e6a50ed1fb77
+EBUILD gegl-0.0.18.ebuild 2472 RMD160 f5d26a6ad5296ef40a8dcc2604e81301e277e53a SHA1 49a36564c42666b12ad5d018c4ce63583a926c10 SHA256 7111ebf325a24dca24063a1d0bc59cd01362a209d70f50456fe7fc148566c776
+EBUILD gegl-9999.ebuild 1636 RMD160 1cf16a18959cd250a1f6889c5d407e410c5ab1cd SHA1 a4a586ce7bdad0bdff493a36a3e1ac8812b4e64f SHA256 78bf5d62b5a3e1da7c11b1741ab49a6ca4e8f62617117126e334226f9b2b479a
+MISC ChangeLog 1260 RMD160 b49baa597fcd087498c1082851887da3ac5bfe7f SHA1 5ed5ed9bae332b7af1295d7dbf0781cd46570e55 SHA256 c48a70eb27f05705936b380e1600caffd332a452371b2f06c3dfacc572517cdd
