@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> -gegl-0.0.16.ebuild,
+  gegl-0.0.18.ebuild, gegl-0.0.18-r1.ebuild, gegl-9999.ebuild:
+  Fixed repoman reported errors.
+
   21 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> +gegl-0.0.18-r1.ebuild,
   +files/gegl-libavformat.patch:
   Updated ebuild thanks to Geert Vanhaute (bug #183425).
